# odsbox-diff

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml
configs/: config.example.toml  config.m2m.example.toml  config.oidc.example.toml
docs/: usage.md
src/odsbox_diff/: __init__.py  __main__.py  api.py  diff.py
src/odsbox_diff/connection/: __init__.py  config.py  factory.py  manager.py
src/odsbox_diff/ods_diff_hierarchy/: __init__.py  collect.py  diff.py  rel_to_name.py
tests/: conftest.py  test_api.py  test_diff.py
tests/connection/: test_config.py  test_manager.py
tests/ods_diff_hierarchy/: test_collect.py  test_diff.py  test_rel_to_name.py
